--- a/Bank_KKT/Base.lproj/Main.storyboard
+++ b/Bank_KKT/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="02" translatesAutoresizingMaskIntoConstraints="NO" id="tIw-UJ-a5E">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="02-1" translatesAutoresizingMaskIntoConstraints="NO" id="tIw-UJ-a5E">
                                 <rect key="frame" x="-6" y="0.0" width="396" height="844"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -156,7 +156,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="02" width="1242" height="2688"/>
+        <image name="02-1" width="1242" height="2688"/>
         <image name="3" width="1242" height="2688"/>
         <image name="kakao" width="190" height="201"/>
         <systemColor name="systemBackgroundColor">
